@@ -2,21 +2,32 @@
 # make autopep8 to fix most pep8 errors
 # make pylint to check Python code for enhanced compliance including naming
 #  and documentation
+# make coverage-report to check coverage of the python scripts by the tests
+
+CPPSOURCES=$(wildcard {lib,khmer}/*.{cc,hh})
+PYSOURCES=$(wildcard {khmer,scripts}/*.py)
+SOURCES=$(PYSOURCES) $(CPPSOURCES) setup.py
+
 SHELL=/bin/bash
 GCOVRURL=git+https://github.com/nschum/gcovr.git@never-executed-branches
-VERSION=`git describe --tags --dirty | sed s/v//`
+VERSION=$(shell git describe --tags --dirty | sed s/v//)
 
-all: FORCE
+all: khmer/_khmermodule.so
+
+khmer/_khmermodule.so: $(SOURCES)	
 	./setup.py build_ext --inplace
 
-coverage-debug: FORCE
+coverage-debug: $(SOURCES)	
 	export CFLAGS="-pg -fprofile-arcs -ftest-coverage"; ./setup.py \
 		build_ext --debug --inplace --libraries gcov
+	touch coverage-debug
 
 install: FORCE
 	./setup.py build install
 
-dist: FORCE
+dist: dist/khmer-$(VERSION).tar.gz
+
+dist/khmer-$(VERSION).tar.gz: $(SOURCES)
 	./setup.py sdist
 
 clean: FORCE
@@ -26,11 +37,11 @@ clean: FORCE
 	rm khmer/*.pyc lib/*.pyc || true
 	./setup.py clean --all || true
 
-debug:
+debug: FORCE
 	export CFLAGS="-pg -fprofile-arcs"; python setup.py build_ext --debug \
 		--inplace
 
-doc: all
+doc: $(SOURCES) $(wildcard doc/*.txt) doc/conf.py 
 	pip2 install --user sphinx sphinxcontrib-autoprogram || pip2 install \
 		sphinx sphinxcontrib-autoprogram
 	./setup.py build_sphinx --fresh-env
@@ -38,7 +49,9 @@ doc: all
 	@echo '--> docs in build/sphinx/html <--'
 	@echo ''
 
-pdf: FORCE
+pdf: build/sphinx/latex/khmer.pdf
+
+build/sphinx/latex/khmer.pdf: $(SOURCES) doc/conf.py $(wildcard doc/*.txt)	
 	pip2 install --user sphinx sphinxcontrib-autoprogram || pip2 install \
 		sphinx sphinxcontrib-autoprogram
 	./setup.py build_sphinx --fresh-env --builder latex
@@ -46,18 +59,18 @@ pdf: FORCE
 	@echo ''
 	@echo '--> pdf in build/sphinx/latex/khmer.pdf'
 
-cppcheck-result.xml: FORCE
+cppcheck-result.xml: $(CPPSOURCES)
 	ls lib/*.cc khmer/_khmermodule.cc | grep -v test | cppcheck -DNDEBUG \
 		-DVERSION=0.0.cppcheck -UNO_UNIQUE_RC --enable=all \
 		--file-list=- -j8 --platform=unix64 --std=posix --xml \
 		--xml-version=2 2> cppcheck-result.xml
 
-cppcheck: FORCE
+cppcheck: $(CPPSOURCES)
 	ls lib/*.cc khmer/_khmermodule.cc | grep -v test | cppcheck -DNDEBUG \
 		-DVERSION=0.0.cppcheck -UNO_UNIQUE_RC --enable=all \
 		--file-list=- -j8 --platform=unix64 --std=posix --quiet
 
-pep8: FORCE
+pep8: $(PYSOURCES) $(wildcard tests/*.py)
 	pip2 install --user --quiet pep8==1.5 || pip2 install --quiet pep8==1.5
 	pep8 --exclude=_version.py setup.py khmer/ scripts/ tests/ || true
 
@@ -70,12 +83,12 @@ diff_pep8_report: pep8_report.txt
 	pip2 install --user diff_cover || pip2 install diff_cover
 	diff-quality --violations=pep8 pep8_report.txt
 
-autopep8: FORCE
+autopep8: $(PYSOURCES) $(wildcard tests/*.py)
 	pip2 install --user autopep8 || pip2 install autopep8
 	autopep8 --recursive --in-place --exclude _version.py --ignore E309 \
 		setup.py khmer/ scripts/ tests/
 
-pylint: FORCE
+pylint: $(PYSOURCES) $(wildcard tests/*.py)
 	pip2 install --user pylint || pip2 install pylint
 	pylint --msg-template="{path}:{line}: [{msg_id}({symbol}), {obj}] {msg}" \
 		setup.py khmer/[!_]*.py khmer/__init__.py scripts/*.py tests \
@@ -94,16 +107,29 @@ diff_pylint_report: pylint_report.txt
 # We need to get coverage to look at our scripts. Since they aren't in a
 # python module we can't tell nosetests to look for them (via an import
 # statement). So we run nose inside of coverage.
-.coverage: coverage-debug
-	pip2 install --user coverage || pip2 install coverage
+.coverage: $(PYSOURCES) $(wildcard tests/*.py)
+	pip2 install --user --upgrade coverage || pip2 install --upgrade \
+		coverage
 	coverage run --branch --source=scripts,khmer --omit=khmer/_version.py \
 		-m nose --with-xunit --attr=\!known_failing --processes=0
 
 coverage.xml: .coverage
+	pip2 install --user --upgrade coverage || pip2 install --upgrade \
+		coverage
 	coverage xml
 
-coverage.html: .coverage
+coverage.html: htlmcov/index.html
+
+htmlcov/index.html: .coverage
+	pip2 install --user --upgrade coverage || pip2 install --upgrade \
+		coverage
 	coverage html
+	@echo Test coverage of the Python code is now in htmlcov/index.html
+
+coverage-report: .coverage
+	pip2 install --user --upgrade coverage || pip2 install --upgrade \
+		coverage
+	coverage report
 
 coverage-gcovr.xml: coverage-debug test
 	pip2 install --user --upgrade ${GCOVRURL}'#gcovr' || pip2 install \
@@ -120,7 +146,7 @@ diff-cover.html: clean coverage-gcovr.xml coverage.xml
 	diff-cover coverage-gcovr.xml coverage.xml \
 		--html-report diff-cover.html
 
-nosetests.xml: all
+nosetests.xml:
 	pip2 install --user nose || pip2 install nose
 	./setup.py nosetests --with-xunit
 
@@ -142,10 +168,12 @@ sloccount.sc: FORCE
 	sloccount --duplicates --wide --details lib khmer scripts tests \
 		setup.py Makefile > sloccount.sc
 
-sloccount: FORCE
+sloccount: 
 	sloccount lib khmer scripts tests setup.py Makefile
 
-coverity:
+coverity: setup.py $(wildcard {lib/khmer}/*.{cc,hh}) \
+	$(wildcard {scripts,khmer}/*.py})
+	
 	if [[ -x ${cov_analysis_dir}/cov-build ]]; \
 	then if [[ -n "${COVERITY_TOKEN}" ]]; \
 		then \
